se trabajo la parte personal

--- a/g_administrativa.html
+++ b/g_administrativa.html
@@ -538,7 +538,7 @@
                   <div class=" d-flex align-items-center justify-content-center">
                     <img src="./assets/img/icono/registration.png" alt="" width="30">
                   </div>
-                  <a href="#">
+                  <a href="informacion_personal.html">
                   <p class="mini-card">Ingresa tu información personal</p>
                 </a>
                 </div>
