se trabajo noveda persona

--- a/informacion_personal.html
+++ b/informacion_personal.html
@@ -528,7 +528,8 @@
           </div>
           </div>
           <!-- Table with stripped rows -->
-          <table class="table datatable" id="example1">
+         
+          <table class="table datatable pt-2" id="example1">
             <thead>
               <tr>
                 <th scope="col">Item</th>
@@ -552,8 +553,8 @@
                 <td>12-07-2014</td>
                 <td class="col-md-2 text-center">
                   <a href="" type="button" class="btn btn-success btn-sm"><i class="bi bi-pencil-square"></i></a>
-                  <a href="" type="button" class="btn btn-danger btn-sm"><i class="bi bi-calendar2-week"></i></a>
-                  <a href="" type="button" class="btn btn-info btn-sm text-white"><i class="ri-user-2-fill"></i></a>
+                  <a href="form_horario.html" type="button" class="btn btn-danger btn-sm"><i class="bi bi-calendar2-week"></i></a>
+                  <a href="noveda_personal.html" type="button" class="btn btn-info btn-sm text-white"><i class="ri-user-2-fill"></i></a>
                 </td>
               </tr>
             
