--- a/form_horario.html
+++ b/form_horario.html
@@ -453,243 +453,120 @@
   <main id="main" class="main">
 
     <div class="pagetitle mt-4 mb-5">
-      <h3>Te damos la bienvenida a la sección</h3>
-      <h2 class="fw-bold">Gestión Administrativa</h2>
+      <h3>CONTROL DIA LIBRE</h3>
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
-      <div class="row">
-        <!-- Revenue Card -->
-        <div class="col-xxl-4 col-md-3">
-          <div class="card  revenue-card card-admin" style="background:#FEF3E6;">
-            <div class="card-body">
-              <div class="ps-2">
-                <a href="reclamo.html">
-                  <p class="mt-4">Solicitudes y reclamos</p>
-                </a>
-              </div>
+      <div class="card">
+        <div class="card-header">
+          <div class="row text-white">
+            <div class="col-md-12">
+              <h5 class="card-title text-center">SISTEMA DE GESTION Y CONTROL DE SEGURIDAD SGCS</h5>
             </div>
-          </div>
-        </div>
-        <div class="col-xxl-4 col-md-3">
-          <div class="card  revenue-card card-admin">
-            <div class="card-body">
-              <div class="icon-bell rounded-circle d-flex align-items-center justify-content-center ">
-                <i class="bi bi-bell"></i>
-               </div>
-              <div class="ps-2">
-                <a href="administrativa.html">
-                  <p class="mt-1">Novedades</p>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xxl-4 col-md-3">
-          <div class="card  revenue-card card-admin">
-            <div class="card-body">
-              <div class="ps-2">
-                <a href="administrativa.html">
-                  <p class="mt-4">Asignaciones</p>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xxl-4 col-md-3">
-          <div class="card  revenue-card card-admin" style="background:#FEF3E6;">
-            <div class="card-body">
-              <div class="icon-bell rounded-circle d-flex align-items-center justify-content-center ">
-                <i class="bi bi-bell"></i>
-               </div>
-              <div class="ps-2">
-                <a href="administrativa.html">
-                  <p class="mt-1">Acciones no completadas</p>
-                  </a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!-- End row -->
 
-      <!--==================== Pequena card =====================-->
-
-      <div class="card" style="border: 1px solid #FB9B2D;">
+            <div class="col-md-3">
+                <img width="30%" src="./assets/img/fotoEmplado/usuarioblanco.jpg" alt="">
+            </div>
+          </div>
+        </div>
         <div class="card-body">
-          <p class="fw-bold mt-3 p-4">Para comenzar te recomendamos estos pasos:</p>
-          <div class="row justify-content-center">
-            <div class="col-sm-2">
-              <div class="card text-center" style="background:#FEF3E6;">
-                <div class="card-body mt-3">
-                  <div class=" d-flex align-items-center justify-content-center">
-                    <img src="./assets/img/icono/settings.png" alt="" width="30">
-                  </div>
-                  <a href="conf_plataforma.html">
-                    <p class="mini-card">Configura tu plataforma</p>
-                  </a>
-                </div>
-              </div>
-            </div>
+            <form class="row g-3">
+                 <h6 class="bg-danger text-center text-white">INFORMACION BASICA</h6>
 
-            <div class="col-sm-2">
-              <div class="card text-center" style="background:#E8FCE8;">
-                <div class="card-body mt-3">
-                  <div class=" d-flex align-items-center justify-content-center">
-                    <img src="./assets/img/icono/registration.png" alt="" width="30">
-                  </div>
-                  <a href="informacion_personal.html">
-                  <p class="mini-card">Ingresa tu información personal</p>
-                </a>
+                <div class="col-md-4 mb-3">
+                  <label for="inputZip" class="form-label">Apellidos:</label>
+                  <input type="text" class="form-control" id="inputZip">
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="card text-center" style="background:#D6EEFB;">
-                <div class="card-body mt-3">
-                  <div class=" d-flex align-items-center justify-content-center">
-                    <img src="./assets/img/icono/costumer.png" alt="" width="33">
-                  </div>
-                  <a href="clientes.html">
-                  <p class="mini-card">Ingresa tus clientes</p>
-                 </a>
+                <div class="col-md-4 mb-3">
+                  <label for="inputCity" class="form-label">Nombres:</label>
+                  <input type="text" class="form-control" id="inputCity">
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="card text-center" style="background:#FEF3E6;">
-                <div class="card-body mt-3">
-                  <div class=" d-flex align-items-center justify-content-center">
-                    <img src="./assets/img/icono/inventario.png" alt="" width="33">
-                  </div>
-                  <a href="config_inventario.html">
-                  <p class="mini-card">Organiza tu inventario</p>
-                 </a>
+                 <div class="col-md-4 mb-3">
+                  <label for="inputCity" class="form-label">Cédula o Pasaporte:</label>
+                  <input type="text" class="form-control" id="inputCity">
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="card text-center" style="background:#f3f4f5;">
-                <div class="card-body mt-3">
-                  <div class=" d-flex align-items-center justify-content-center">
-                    <img src="./assets/img/icono/progreso.jpg" alt="" width="35">
+                <div class="col-md-4 mb-3">
+                    <label for="inputState" class="form-label">Fecha de Nacimiento:</label>
+                    <input type="date" class="form-control" id="inputCity">
                   </div>
-                  <p class="mini-card">Progreso</p>
+
+                <div class="col-md-4 mb-3">
+                  <label for="inputState" class="form-label">Lugar de Nacimiento:</label>
+                  <input type="text" class="form-control" id="inputCity">
                 </div>
-              </div>
-            </div>
-          </div><!-- End row -->
-        </div>
+
+                <div class="col-md-4 mb-3">
+                  <label for="inputState" class="form-label">Celular:</label>
+                 <input type="text" class="form-control" id="inputCity">
+                </div>
+
+                <div class="col-md-4 mb-3">
+                  <label for="inputState" class="form-label">Calle y Número de Residencia:</label>
+                  <input type="text" class="form-control" id="inputCity">
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="inputState" class="form-label">Municipio, Sector:</label>
+                  <input type="text" class="form-control" id="inputCity">
+                </div>
+                <div class="col-md-3 mb-3">
+                  <label for="inputState" class="form-label">Tanda:</label>
+                  <input type="text" class="form-control" id="inputCity">
+                </div>
+
+                <div class="col-md-5 mb-3">
+                  <label for="inputState" class="form-label">Cliente:</label>
+                  <input type="text" class="form-control" id="inputCity">
+
+                  <div class="col-md-3 mt-4">
+                    <input type="text" class="form-control" id="inputCity" placeholder="06:00">
+                </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="inputState" class="form-label">Puesto Trabajo:</label>
+                  <input type="text" class="form-control" id="inputCity">
+
+                  <div class="col-md-4 mt-4">
+                    <input type="text" class="form-control" id="inputCity" placeholder="00:00:00.000000">
+                </div>
+                </div>
+
+                <div class="bg-danger p-2"></div>
+
+                <div class="col-md-4 mb-3">
+                    <label for="inputState" class="form-label text-danger">SELECCION DIA LIBRE</label>
+                    <input type="date" class="form-control" id="inputCity">
+                 </div>
+                
+
+                <div class="col-md-5 mb-3">
+                  <label for="inputState" class="form-label  text-danger">SELECCION QUIEN CUBRIRA DIA LIBRE</label>
+                  <select class="form-select" aria-label="Default select example">
+                    <option selected>Julio Miguer Beriguete</option>
+                    <option value="1">Vincel Bangot</option>
+                    <option value="2">David de Miguel Angel</option>
+                    <option value="3">Leonaldo Davincil</option>
+                  </select>
+                </div>
+
+                <div class="col-md-3 mb-3">
+                    <label for="inputState" class="form-label text-danger">TIPO DIA</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Consecutivos</option>
+                      <option value="1">Fijo</option>
+                      <option value="2">Rotativo</option>
+                      <option value="3">Uno Aleatorio</option>
+                    </select>
+                  </div>
+
+                <div class="text-center mt-5 mb-5">
+                    <button type="submit" class="btn btn-info">Guardar</button>
+                    <a href="informacion_personal.html" class="btn btn-info">Salir</a>
+                </div>
+            
+              </form>
+        </div><!--fin card body -->
       </div>
-      <!--==================== fin Pequena card =====================-->
-      <!--==================== graficos =====================-->
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Comportamiento de las compras/ventas</h5>
 
-              <!-- Column Chart -->
-              <div id="columnChart"></div>
-
-              <script>
-                document.addEventListener("DOMContentLoaded", () => {
-                  new ApexCharts(document.querySelector("#columnChart"), {
-                    series: [{
-                      name: 'Net Profit',
-                      data: [44, 55, 57, 56, 61, 58, 63, 60, 66]
-                    },
-                    {
-                      name: 'Free Cash Flow',
-                      data: [35, 41, 36, 26, 45, 48, 52, 53, 41]
-                    }],
-                    chart: {
-                      type: 'bar',
-                      height: 350
-                    },
-                    plotOptions: {
-                      bar: {
-                        horizontal: false,
-                        columnWidth: '55%',
-                        endingShape: 'rounded'
-                      },
-                    },
-                    dataLabels: {
-                      enabled: false
-                    },
-                    stroke: {
-                      show: true,
-                      width: 2,
-                      colors: ['transparent']
-                    },
-                    xaxis: {
-                      categories: ['Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct'],
-                    },
-                    yaxis: {
-                      title: {
-                        text: '$ (thousands)'
-                      }
-                    },
-                    fill: {
-                      opacity: 1
-                    },
-                    tooltip: {
-                      y: {
-                        formatter: function (val) {
-                          return "$ " + val + " thousands"
-                        }
-                      }
-                    }
-                  }).render();
-                });
-              </script>
-              <!-- End Column Chart -->
-
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-6">
-
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Matriz de riesgo </h5>
-
-
-              <!-- Default Table -->
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">Proceso</th>
-                    <th scope="col">Actividades del proceso</th>
-                    <th scope="col">Partes Involucradas</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Gerencia operaciones</td>
-                    <td>Visitas a cliente</td>
-                    <td>Empleados/Clientes</td>
-                  </tr>
-                  <tr>
-                    <td>Gerencia operaciones</td>
-                    <td>Visitas a cliente</td>
-                    <td>Empleados/Clientes</td>
-                  </tr>
-                  <tr>
-                    <td>Gerencia operaciones</td>
-                    <td>Visitas a cliente</td>
-                    <td>Empleados/Clientes</td>
-                  </tr>
-                </tbody>
-              </table>
-              <!-- End Default Table Example -->
-            </div>
-          </div>
-        </div>
-
-      </div>
     </section>
 
   </main><!-- End #main -->
