--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <div class="row">
         <!-- Revenue Card -->
         <div class="col-xxl-4 col-md-4">
-          <div class="card info-card revenue-card">
+          <div class="card info-card revenue-card card-primary card-outline">
              <div class="card-body">
                <div class="d-flex align-items-center">
                 <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
