cambio del dia lunes veinticuatro

--- a/armaFuego_letal.html
+++ b/armaFuego_letal.html
@@ -294,7 +294,7 @@
             </a>
             <ul class="submenu">
               <li>
-                <a href="armaFuego_letal.html">
+                <a href="components-breadcrumbs.html">
                   <i class="bi bi-circle"></i><span>Arma de fuego letal</span>
                 </a>
               </li>
@@ -504,7 +504,7 @@
               <tr>
                 <th scope="row">001</th>
                 <td><img width="40%" src="./assets/img/inventario.png" alt=""></td>
-                <td>Pistola de seguridad</td>
+                <td>Escopeta Armed 12 mts</td>
                 <td>Glock G19</td>
                 <td>G19</td>
                 <td>23145</td>
@@ -520,8 +520,8 @@
               <tr>
                 <th scope="row">002</th>
                 <td><img width="40%" src="./assets/img/inventario.png" alt=""></td>
-                <td>Pc de vigilancia</td>
-                <td>Dell</td>
+                <td>Pistola Zoraki Mod 9mm</td>
+                <td>Zoraki</td>
                 <td>Latitude E7470</td>
                 <td>Ultrabook</td>
                 <td>23590683</td>
