--- a/config_usuario.html
+++ b/config_usuario.html
@@ -295,7 +295,7 @@
                         </a>
                         <ul class="submenu">
                             <li>
-                                <a href="components-breadcrumbs.html">
+                                <a href="armaFuego_letal.html">
                                     <i class="bi bi-circle"></i><span>Arma de fuego letal</span>
                                 </a>
                             </li>
