--- a/g_administrativa.html
+++ b/g_administrativa.html
@@ -214,7 +214,7 @@
             </a>
             <ul class="submenu">
               <li>
-                <a href="components-breadcrumbs.html">
+                <a href="factura.html">
                   <i class="bi bi-circle"></i><span>Facturas</span>
                 </a>
               </li>
@@ -289,7 +289,7 @@
             </a>
             <ul class="submenu">
               <li>
-                <a href="components-breadcrumbs.html">
+                <a href="armaFuego_letal.html">
                   <i class="bi bi-circle"></i><span>Arma de fuego letal</span>
                 </a>
               </li>
@@ -489,7 +489,7 @@
           <div class="card  revenue-card card-admin">
             <div class="card-body">
               <div class="ps-2">
-                <a href="administrativa.html">
+                <a href="asignaciones.html">
                   <p class="mt-4">Asignaciones</p>
                 </a>
               </div>
