--- a/conf_plataforma.html
+++ b/conf_plataforma.html
@@ -289,7 +289,7 @@
             </a>
             <ul class="submenu">
               <li>
-                <a href="components-breadcrumbs.html">
+                <a href="armaFuego_letal.html">
                   <i class="bi bi-circle"></i><span>Arma de fuego letal</span>
                 </a>
               </li>
