se trabajo la parte de gestion de operacione

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   <img src="./assets/img/icono/Mejoras.png" alt="" width="40">
                 </div>
                 <div class="ps-3">
-                  <a href="administrativa.html">
+                  <a href="gestion_operaciones.html">
                   <p class="card-title">Gestión Operaciones</p>
                   </a>
                  </div>
